[package]
name = "de-solana-client"
version = "0.3.5"
edition = "2021"
authors = [
    "cyphersnake <cyphersnake@pm.me>",
    "shinkarenko  <shinbogdan@gmail.com>",
]
description = "Provides various utilities for working with Solana blockchain RPC"
publish = true
keywords = ["solana", "anchor", "blockchain", "utilities"]
license = "MIT"

[dependencies]
async-trait = "0.1.56"
reqwest = "0.11.11"
tokio = { version = "1.14.1", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
base58 = "0.2.0"
thiserror = "1.0.30"
itertools = "0.10.5"

solana-account-decoder = "1.16.0"
solana-transaction-status = "1.16.0"
solana-client = "1.16.0"
solana-sdk = "1.16.0"

[dev-dependencies]
dirs = "4.0.0"
serde_json = "1.0.85"
spl-memo = "3.0.1"
